--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ form{
 
 label { 
   float: right;
-  padding: 10px 50px 10px 50px;
+  padding: 10px 30px 10px 30px;
        
 }
 
@@ -50,5 +50,4 @@ input, textarea {
 .row:after {
   content: "";
   display: table;
-  clear: both;
-}
+  clear: both;}
