--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ label {
   margin-top: 6px;
 }
 
+.col-70{
+  float:left;
+  width:70%;
+  margin-top: 6px;
+}
+
 .col-35{
   float:left;
   width:35%;
